src/cses/increasing_array/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/increasing_array/increasing_array.cpp.
/Users/michael/repos/competitive-programming/src/cses/increasing_array/increasing_array.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
Found compiler error(s).
